2000-07-30  Andrew Main <zefram@zsh.org>

	* 12434: Doc/Zsh/invoke.yo, Src/init.c, Src/options.c, Src/zsh.h,
	Src/zsh.mdd: Allow options to be specified on the zsh command line
	in the form of GNU-style long options.	Also handle --version
	and --help.  Do not permit extra option letters to be stacked
	after `-whatever-' (they used to be ignored).  Exit if the
	command line specifies an option name that doesn't exist.

2000-07-28  Bart Schaefer  <schaefer@zsh.org>

	* 12393: Src/jobs.c: The `wait' builtin searches the job table for
	any process ID it's asked to wait for, and rejects those it
	doesn't find.

2000-07-28  Peter Stephenson  <pws@csr.com>

	* 12421: Src/Makemod.in.in: extra tab

	* Andrej: 12419: Src/builtin.c, Src/params.c: use putenv() and
	getenv() if available and try to make minimal assumptions about
	environment handling.

	* Andrej: 12411: check for brk() and sbrk() and use sbrk() if no
	brk().

2000-07-27  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 12415: Src/utils.c: fix bug in 12414 when quoting metafied field
	separator.

2000-07-27  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 12414: Doc/Zsh/mod_zle.yo, Src/exec.c, Src/utils.c,
	Src/Zle/zle_main.c: vared quotes separators when editing arrays.

2000-07-27  Sven Wischnowsky  <wischnow@zsh.org>

	* 12408: Test/55arguments.ztst: fix completion test (55*) because
 	of 12394
	
	* 12405: Completion/Core/_main_complete, Doc/Zsh/compsys.yo: fix a
 	bug that started menu selection too often; fix bug for `yes=long'
 	and documentit
	
2000-07-27  Bart Schaefer  <schaefer@zsh.org>

	* 12396: Functions/Misc/zed: The value of `$(functions $1)' for
	autoloadable functions has changed.

2000-07-27  Sven Wischnowsky  <wischnow@zsh.org>

	* 12400: Src/Zle/computil.c: compdescribe shouldn't use the sets
 	after failed initialisation
	
	* 12394: Completion/Core/_main_complete: don't hide possible
 	completions if there is only one and at the same time messages are
 	shown
	