@@ -72,8 +72,11 @@ with preceding options (so `tt(-x-)' is equivalent to `tt(-x --)').  Options
 are not permitted to be stacked after `tt(--)' (so `tt(-x-f)' is an error),
 but note the GNU-style option form discussed above, where `tt(--shwordsplit)'
 is permitted and does not end option processing.
-Except when emulating sh or ksh, the option `tt(-b)' is treated the same way
-as `tt(--)' for the purpose of ending option processing.
+
+Except when the bf(sh)/bf(ksh) emulation single-letter options are in effect,
+the option `tt(-b)' (or `tt(PLUS()b)') ends option processing.
+`tt(-b)' is like `tt(--)', except that further single-letter options can be
+stacked after the `tt(-b)' and will take effect as normal.
 
 startmenu()
 menu(Compatibility)
